unpackaged/objects/Sales_Quarter__c.object
<CustomObject>
  <description>Used by Russia for Sales Rep to capture est Sales regarding implant purchases between Clinical and RU Distributor.</description>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Oral_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Implant_Brand__c</fullName>
    <label>Implant Brand</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Ankylos</fullName>
        </value>
        <value>
          <fullName>Astra Tech Implant System</fullName>
        </value>
        <value>
          <fullName>XiVE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Number_of_DI_implants_sold__c</fullName>
    <description>Based on confirmed sales from distributor.</description>
    <label>Number of DI implants sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Number_of_est_DI_Implants__c</fullName>
    <description>To be filled in by Sales Rep when agreing on an implant purchase.</description>
    <label>Number of est DI Implants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Sales Quarter</label>
  <nameField>
    <label>Sales Quarter</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Sales Quarter</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>